<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.detailsEpisodes.ui.DetailsEpisodesFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarDetailsEpisodes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/details_screen_episode" />

        <TextView
            android:id="@+id/DetailsEpisodeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/episode"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageEpisodeDetails" />

        <TextView
            android:id="@+id/DetailsNameEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DetailsEpisodeTitle"
            tools:text="name" />

        <TextView
            android:id="@+id/DetailsReleaseDataEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintStart_toStartOf="@+id/DetailsReleaseDataEpisodeTitle"
            app:layout_constraintTop_toBottomOf="@+id/DetailsReleaseDataEpisodeTitle"
            tools:text="Release data" />

        <TextView
            android:id="@+id/DetailsReleaseDataEpisodeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/data"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DetailsNameEpisode" />

        <TextView
            android:id="@+id/DetailsCharactersEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/characters"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DetailsReleaseDataEpisode" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detailsEpisodesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DetailsCharactersEpisode"
            tools:listitem="@layout/item_hero" />

        <ProgressBar
            android:id="@+id/progressBarRecyclerEpisodeDetails"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detailsEpisodesRecyclerView" />

        <ImageView
            android:id="@+id/imageEpisodeDetails"
            android:layout_width="match_parent"
            android:paddingTop="15dp"
            android:layout_height="170dp"
            android:src="@drawable/rocket_ship"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarDetailsEpisodes" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
